get online users

--- a/src/main/resources/index.html
+++ b/src/main/resources/index.html
@@ -18,6 +18,8 @@
             Battleship.doLogin(url, login, function(playerId) {
                 $(".login").hide();
                 $(".userlist").show();
+
+                Battleship.getUserList();
             });
         });
     });
